# ESMEvals

./: .gitignore  main.py  pyproject.toml
src/ESMEvals/: __init__.py  cli.py
src/ESMEvals/evaluators/: __init__.py  sequence.py  structure.py  structure_utils.py
src/ESMEvals/utils/: pll.py
